# chado-dao-swarm

./: Dockerfile  README.md  SUBMISSION.md  agent.json  pyproject.toml
scripts/: register_agent.py
src/: config.py  main.py
src/agents/: __init__.py  impact_simulator.py  orchestrator.py  proposal_analyzer.py  recommender.py  yield_optimizer.py
tests/: test_basic.py
